# ph-model

./: README.md  crypto-fetch.command  pyproject.toml
src/model/: __init__.py  cli.py  crypto_data.py
tests/: test_banner_logo.py  test_buyback.py  test_coin_info.py  test_exchange_listing.py  test_exchange_select.py  test_exchange_utils.py  test_fetch_fallback.py  test_fetch_multi.py  test_huobi_fetch.py  test_latoken_lbank_fetch.py  test_liquidation.py  test_nonstandard_symbol.py  test_prompt_clear.py  test_quote_filter.py  test_selloffs.py  test_surges.py  test_tqdm_optional.py
